# MelodySyncer

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json
api/: analytics.rs  favicon.rs  help.rs  index.rs  playlist.rs  repeat.rs  song.rs
legacy/: OLD_README.md
public/: index.html  styles.css
python/: index.py
src/: lib.rs
