[package]
name = "melody-syncer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
urlencoding = "2.1"

# API handler binaries
[[bin]]
name = "repeat"
path = "api/repeat.rs"

[[bin]]
name = "index"
path = "api/index.rs" 