[package]
name = "melody-syncer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime - maximum performance
tokio = { version = "1.0", features = ["rt", "net", "time", "macros"] }
# HTTP client - fastest async HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# JSON serialization - fastest JSON library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Vercel runtime
vercel_runtime = "1.0"
# URL encoding
urlencoding = "2.1"
# Base64 encoding for Spotify auth
base64 = "0.21"
# MongoDB async driver - optional to reduce bundle size
mongodb = { version = "2.8", optional = true, default-features = false }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Async traits
async-trait = "0.1"
# Future utilities
futures = "0.3"
# Environment variables
dotenv = "0.15"
# Regex for duration parsing
regex = "1.0"
# Lazy static for global clients
once_cell = "1.19"
# Tracing for logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# API handler binaries - all the endpoints
[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "song"
path = "api/song.rs"

[[bin]]
name = "playlist"
path = "api/playlist.rs"

[[bin]]
name = "help"
path = "api/help.rs"

[[bin]]
name = "analytics"
path = "api/analytics.rs"

[[bin]]
name = "favicon"
path = "api/favicon.rs"

[[bin]]
name = "repeat"
path = "api/repeat.rs"

[features]
default = ["mongodb"]
analytics = ["mongodb"] 